# ecg2af-web-app

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/ecg2af_web_app/: app.py  ecg_settings.py  test_app.py
src/ecg2af_web_app/html_template/: index.html  results.html
src/ecg2af_web_app/test_playground/: fake_0_downsampled.npy  model_prediction.ipynb
