[tool.poetry]
name = "ecg2af_web_app"
version = "0.0.1"
description = "ML4H Take-Home Assignment"
# license = ""
authors = ["Nick DiNapoli <nmd67@cornell.edu.com>"]
maintainers = ["Nick DiNapoli <nmd67@cornell.edu.com>"]
readme = "README.md"
# homepage = ""
repository = "https://github.com/NickDiNapoli/ecg2af_web_app"
# documentation = ""
# keywords = ""
classifiers = [
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: ML",
    "Programming Language :: Python :: 3.8",
]
packages = [{ include = "ecg2af_web_app", from = "src" }]

[tool.poetry.dependencies]
# python = ">=3.7,<=3.10"
python = "3.8.10"


[tool.poetry.group.dev.dependencies]
docutils = "0.20.1"
Flask = "2.3.3"
h5py = "3.6.0"
matplotlib = "3.7.5"
numpy = "*" # "1.24.4"
pandas = "2.0.3"
plotly = "5.24.1"
tensorflow = "2.9.1"
tensorflow-io-gcs-filesystem = "0.26.0"
# ml4h = { git = "https://github.com/broadinstitute/ml4h" }


[tool.poetry.group.deploy.dependencies]
python-semantic-release = "^7.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "develop"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
major_on_zero = true